{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "6c9cb058-1126-41c4-a4ff-654211ad68ae",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "7261b9d5-457f-4720-9608-59f84af41058",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "bbd532ec-3830-4006-87fd-31b96d7a1021",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "afb8cd6e-24e2-4695-aaf8-f0ebf6d685b6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "5bd2fa4c-536c-4c1d-9247-993d26ec7e4c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "dbdbd70d-dc0a-47b1-a402-ae944cc1bdf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeToMainWeapon",
                    "type": "Button",
                    "id": "c7c53c53-7f9a-475c-9b1b-6437e9c6e9b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeToSecondaryWeapon",
                    "type": "Button",
                    "id": "f3b8b3be-5996-4a87-869f-6207427d29d0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CollectWeapon",
                    "type": "Button",
                    "id": "6b1a4e1d-c81b-425a-80c8-8d45f1547958",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "0728b5a6-efb6-4c43-9410-442779faf4ee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6dc58afe-9e41-49f4-b7e8-49048ca71fbf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2343fb7f-984b-473a-b0f1-cd3295b05f6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cd7c71a-309f-4d21-98a8-24102d03d5f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "271787bc-719a-4a64-971f-46232e971aba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "2b1737c4-add5-4fa7-a97e-4c827cbbe73e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cbe865a8-f1e3-4a39-a477-47927205eef5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5e0f1cd5-74c9-4910-a9ba-f285d5596378",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6fdfdb4f-ee07-4ff5-a429-ce6b31cc4061",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f0351394-db60-4aab-b58f-39e374bec453",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "65c59327-b97b-4fc4-bfb2-34ec7e26b6e9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4e99138-bcf4-4438-b7a7-f4354bb588d5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2728bcd9-b1f1-40cd-812e-a5fdf74776c6",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7df5f693-fd73-4cb4-b20a-9ff5fb431cff",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ce58f5a-ff14-4ad7-9639-78727f135c78",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToSecondaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef1379e9-c48e-4564-a976-ddbe9b0ce424",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToSecondaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c3ee680-5756-4338-885a-1bf0211d1709",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToMainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "148c3450-903e-4f6a-9d5b-03be49c41846",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToMainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "335872a1-e5ad-459d-a806-aca53c7b581f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CollectWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}